# SimpleLogger

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: main.yml
src/: CMakeLists.txt  config.json  main.cpp
src/Logger/: CMakeLists.txt  Logger.cpp
src/Logger/include/Logger/: Logger.h
src/utils/: CMakeLists.txt  utils.cpp
src/utils/include/: utils.h
src/utils/include/utils/: utils.h
tests/: CMakeLists.txt  LoggerTest.cpp
